--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -19,6 +19,7 @@
     
       & .content {
         opacity: 0.9;
+        border: none;
       }
     }
     
@@ -51,14 +52,13 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      border: 1px solid black;
       background-color: white;
       opacity: .7;
       position: absolute;
   
       .title {
         font-weight: bold;
-        margin-bottom: 6px;
+        margin-bottom: 4px;
         font-size: 22px;
         color: #4a4a4a;
       }
